--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,34 +1,34 @@
 html {
-  font-size: $root-font-size;
+  font-size: 22px;
 }
 
 body {
   background: $brand-color;
   color: $text-color;
   font-family: $font-family;
-  font-size: $body-font-size;
+  font-size: em;
   line-height: 1.5;
 }
 
 h1 {
-  font-size: calc(3 * $body-font-size);
+  font-size: calc(3 * em);
   margin: 1em auto;
 }
 
 h2 {
-  font-size: calc(2 * $body-font-size);
+  font-size: calc(2 * em);
   margin: 1em auto;
   text-align: left;
 }
 
 h3 {
-  font-size: calc(1.33 * $body-font-size);
+  font-size: calc(1.33 * em);
   margin: 1em auto;
   text-align: left;
 }
 
 h4 {
-  font-size: $body-font-size;
+  font-size: em;
   font-style: italic;
   margin: 1em auto;
   text-align: center;
@@ -36,7 +36,7 @@ h4 {
 }
 
 h5 {
-  font-size: $body-font-size;
+  font-size: em;
   font-style: italic;
   margin: 1em auto;
   text-align: center;
@@ -44,7 +44,7 @@ h5 {
 }
 
 h6 {
-  font-size: calc(0.875 * $body-font-size);
+  font-size: calc(0.875 * em);
   font-style: italic;
   margin: 1em auto;
   text-align: center;
@@ -80,7 +80,7 @@ blockquote.epigraph {
 }
 
 small {
-  font-size: calc(0.75 * $body-font-size);
+  font-size: calc(0.75 * em);
 }
 
 p > cite {
@@ -108,7 +108,7 @@ figure img {
 }
 
 figcaption {
-  font-size: calc(0.875 * $body-font-size);
+  font-size: calc(0.875 * em);
   font-style: italic;
   text-align: center;
   margin-bottom: 2em;
@@ -127,7 +127,7 @@ figcaption {
 }
 
 .content-title {
-  font-size: calc(2 * $body-font-size);
+  font-size: calc(2 * em);
   margin-bottom: 2em;
   text-align: center;
 }
@@ -135,7 +135,7 @@ figcaption {
 .post-date {
   color: $muted-text-color;
   display: block;
-  font-size: calc(0.825 * $body-font-size);
+  font-size: calc(0.825 * em);
   white-space: nowrap;
   text-transform: uppercase;
   .post-link & {
@@ -153,7 +153,7 @@ figcaption {
   background: $brand-color;
   border: 1px dashed transparent;
   display: block;
-  font-size: calc(0.875 * $body-font-size);
+  font-size: calc(0.875 * em);
   font-weight: 700;
   margin-top: -2.625rem;
   padding: .5rem;
