--- a/_sass/_post-list.scss
+++ b/_sass/_post-list.scss
@@ -41,7 +41,7 @@
     padding: .25em 0;
   }
   h1 {
-    font-size: $body-font-size;
+    font-size: rem;
     margin-bottom: 0;
     margin-top: 0;
   }
@@ -53,7 +53,7 @@
 
 .post-pagination {
   margin-top: 4rem;
-  font-size: calc(0.75 * $body-font-size);
+  font-size: calc(0.75 * $root-font-size);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
