--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -6,21 +6,21 @@
 
 .site-masthead h1 {
   font-family: "PP Editorial Old Ultrabold";
-  font-size: calc(1.5 * $root-font-size);
+  font-size: calc(1.5 * #{$root-font-size});
   margin-bottom: 0;
   margin-top: 1em;
   padding: 0 2rem;
   @media (min-width: $on-tablet) {
-    font-size: calc(6 * $root-font-size);
+    font-size: calc(6 * #{$root-font-size});
   }
 }
 
 .site-masthead h2 {
   color: $muted-text-color;
-  font-size: calc(1.25 * $root-font-size);
+  font-size: calc(1.25 * #{$root-font-size});
   margin: 0;
   padding: 0 2rem;
   @media (min-width: $on-tablet) {
-    font-size: calc(3 * $root-font-size);
+    font-size: calc(3 * #{$root-font-size});
   }
 }
