--- a/_sass/_post-list.scss
+++ b/_sass/_post-list.scss
@@ -53,7 +53,7 @@
 
 .post-pagination {
   margin-top: 4rem;
-  font-size: calc(0.75 * $root-font-size);
+  font-size: calc(0.75 * #{$root-font-size});
   display: flex;
   flex-direction: row;
   justify-content: space-between;
