--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -229,21 +229,28 @@
 
 
 .post .bibliography {
-  margin-top: 3em;
-  padding-top: 1em;
-  border-top: 1px solid #e0e0e0;
+  margin-top: 4em;
+  padding-top: 2em;
+  border-top: 2px solid #e8e8e8;
   color: $subtle-text-color;
+  background-color: #fafafa;
+  padding: 2em;
+  border-radius: 8px;
+  margin-left: -2em;
+  margin-right: -2em;
 }
 
 
 .post .bibliography-title {
   font-family: $font-family-bold;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-variant: small-caps;
   text-align: left;
   text-indent: 0;
-  margin-bottom: 1em;
-  color: $subtle-text-color;
+  margin-bottom: 1.5em;
+  color: $text-color;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 0.5em;
 }
 
 
@@ -257,8 +264,11 @@
 
 
 .post .bibliography-list li {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.75rem;
   padding-left: 0rem;
+  text-indent: -1.5rem;
+  padding-left: 1.5rem;
+  line-height: 1.4;
 }
 
 
@@ -266,7 +276,9 @@
   color: inherit; 
   text-decoration: none;
   border-bottom: 1px solid transparent;
-  font-size: 0.83rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  display: block;
 }
 
 
@@ -282,10 +294,12 @@
   position: absolute;
   left: 0;
   width: 100%;
-  font-size: 0.83rem;
-  line-height: 1.4;
+  font-size: 0.85rem;
+  line-height: 1.5;
   color: $subtle-text-color;
   transform: translateY(9rem);
+  text-align: justify;
+  text-justify: inter-word;
 }
   /* Remove default list styling if a <p> isn't used 
   > :first-child {
@@ -306,21 +320,26 @@
 }
 
 .post sup {
-  vertical-align: baseline;
+  vertical-align: super;
   position: relative;
-  top: -0.4em;
-  font-size: 0.8em;
+  top: -0.5em;
+  font-size: 0.75em;
   color: $subtle-text-color;
+  font-weight: 500;
+  margin-left: 0.1em;
 }
 
 
 .post a[href^="#fn-"] {
   text-decoration: none;
   border-bottom: none;
+  color: inherit;
+  transition: color 0.2s ease;
 }
 .post a[href^="#fn-"]:hover {
   background: none;
   color: $text-color; 
+  text-decoration: none;
 }
 
 
